==  ==
-Renamed some JS classes
-Moved static RCData modal helper functions to thier own file GlobalModal


== V2.14b - 23 September 2020 ===
-UCP tweaks / bug fixes
-Fixed word wrap issue based on script's talk page
-Discussion-based comments now link correctly
-Changing dev i18n translation data to use my wiki2html for parsing over the dev script's version to avoid it's html escaping
-Added dropdown for discussion type filtering


== V2.14 - 26 August 2020 ==
-I18n revamp
	-Translation system reworked to use I18n-js for easier translating
	-Multiple i18n MESSAGES replaced or moved to custom messages due to UCP removing many messages
	-Added support for fetching legacy messages on UCP wiki
	-i18n() now uses I18nKey as an arguement to ensure all translation IDs are typed correctly and expected.
	-Moved all custom translation messages (i18n.TEXT) to I18n-js. See details at end of this version notes
-Discussion-based Comments now load thier page names as expected! Big thanks to MarkusRost for pointing out how, and thanks to KockaAdmiralac for pointing out a proxy could get around the CORS issue.
-Updated code to use JQuery typing, custom MediaWiki typing, and an extended window; window calls no longer use <any>
-Added wikia-chiclet-button to CSS for UCP support
-Removed old code / messages about Wikia Maps feature, as it has been removed
-Tweaked gallery modal so clicking image brings you to wiki page, and viewing image uses a new button next to caption
-Converted rc "arr_" images to CSS as uri data. This was done for 2 reasons:
	-Encase those png image are ever removed (since they are no longer used on UCP)
	-To be more efficient (better than manually having an img tag each time)
-As translation data is now in a JSON and can't have comments, I'm putting all the names of people who translated in the past here:
	[be] Беларуская (BELARUSIAN)                     @author: Mix Gerder
	[ca] Català (CATALAN)                            @author: Josep Maria Roca Peña