@@ -1,6 +1,8 @@
 ==  ==
 -Renamed some JS classes
 -Moved static RCData modal helper functions to thier own file GlobalModal
+-Moved log data in RCData to RCDataLog
+-Fixed bug preventing "protect" logs from showing details on modern wikis (UCP)
 
 
 == V2.14b - 23 September 2020 ===
